fixed bug of text-align in header last block

--- a/styles/style.css
+++ b/styles/style.css
@@ -141,16 +141,15 @@ body {
 #text-info {
   width: 142px;
   float: right;
-  padding: 7px 22px 0 0;
+  padding: 12px 22px 0 0;
+  text-align: right;
 }
 #text-info p {
   margin: 0;
+  padding: 10px 0 0;
 }
 #text-info a {
   color: rgb(255, 255, 255);
-}
-#text-info  p {
-  padding: 10px 0;
 }
 .tenth ol {
   column-count: 2;
